--- a/README.org
+++ b/README.org
@@ -16,17 +16,16 @@ contenido.
 
 ** Enero de 2021
 
+*** 19-Ene-21
++ [[https://youtu.be/S4xl0CtJIb4][A novice-friendly induction tactic for Lean]]. ~ Jannis Limperg. #ITP #LeanProver
++ [[https://bor0.wordpress.com/2021/01/18/towards-hoare-logic-for-a-small-imperative-language-in-haskell/][Towards Hoare logic for a small imperative language in Haskell]]. ~ Boro Sitnikovski (@BSitnikovski). #Haskell #FunctionalProgramming
++ [[https://www.informatics-europe.org/images/ECSS/ECSS2009/slides/Gottlob.pdf][Computer Science as the continuation of Logic by other means]]. ~ Georg Gottlob. #Logic #CompSci
+
 *** 18-Ene-21
 + [[https://leanprover-community.github.io/lt2021/slides/thomas-LT2021-Galois-Theory.pdf][Formalizing Galois Theory in Lean [Slides]]]. ~ Thomas Browning, Patrick Lutz. #ITP #LeanProver #Math
 + [[https://youtu.be/-6z6qTD_vv8][Formalizing Galois Theory in Lean [Vídeo]]]. ~ Thomas Browning, Patrick Lutz. #ITP #LeanProver #Math
 + [[https://bit.ly/2XPH8Iq][Las Matemáticas son suficientes para mí]]. ~ Juan Arias de Reyna. #Matemáticas
 + [[https://alhassy.github.io/org-special-block-extras][org-special-block-extras (A unified interface for special blocks and links: defblock)]]. ~ Musa Al-hassy./#Judgements-Inference-rules-and-proof-trees #Emacs #OrgMode
-
-*** 17-Ene-21
-+ [[https://leanprover-community.github.io/lt2021/slides/paula-LeanTogether2021.pdf][Results in modal and dynamic epistemic logic (A formalization in Lean) [Slides]]]. ~ Paula Neeley. #ITP #LeanProver #Logic
-+ [[https://youtu.be/kXCB5wzQTKc][Results in modal and dynamic epistemic logic (A formalization in Lean) [Video]]]. ~ Paula Neeley. #ITP #LeanProver #Logic
-+ [[https://github.com/paulaneeley/modal][Results in modal and dynamic epistemic logic (A formalization in Lean) [Repo]]]. ~ Paula Neeley. #ITP #LeanProver #Logic
-+ [[https://blog.poisson.chat/posts/2021-01-16-dependent-fcfs.html][Defunctionalizing dependent type families in Haskell]]. ~ Li-yao Xia (@lysxia). #Haskell #FunctionalProgramming
 
 *** 16-Ene-21
 + [[https://youtu.be/pMCZFrii4lA][Model theory in Lean]]. ~ Vaibhav Karve. #ITP #LeanProver #Logic
